// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderAccountMenu Rendering Render HeaderAccountMenu component with default props 1`] = `
<div
  className="HeaderAccountMenu"
>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="true"
    className="HeaderAccountMenu__button"
    id="accountMenuBtn"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <AppShellIcon
      icon={[Function]}
      tooltipPlacement="bottom"
      tooltipText="Account"
    />
  </button>
</div>
`;

exports[`HeaderAccountMenu Rendering Render HeaderAccountMenu component with props  1`] = `
<div
  className="HeaderAccountMenu varClassName"
>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="true"
    className="HeaderAccountMenu__button"
    id="accountMenuBtn"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <AppShellIcon
      icon={[Function]}
      tooltipPlacement="bottom"
      tooltipText="Account"
    />
  </button>
</div>
`;

exports[`HeaderAccountMenu Rendering Render HeaderAccountMenu component with pseudo translated text 1`] = `
<div
  className="HeaderAccountMenu"
>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="true"
    className="HeaderAccountMenu__button"
    id="accountMenuBtn"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <AppShellIcon
      icon={[Function]}
      tooltipPlacement="bottom"
      tooltipText="ÂÂççççôôùùnt"
    />
  </button>
</div>
`;
